More cleanups of PASM errors catch and logging